feat: 调整注册器工具类，删除冗余代码